[workspace]
members = ["backend", "desktop"]
default-members = ["backend"]

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[profile.fire]
inherits = "release"
debug = true
strip = true
opt-level = 3
lto = true
codegen-units = 1

[lints.clippy]
enum_glob_use = 'deny'
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -2 }
